<resources>
    <string name="app_name">Explora-me</string>
    <string name="btncamara">Cámara</string>
    <string name="btnseleccionarfoto">Seleccionar Foto de Archivos</string>
    <string name="btnaceptarfoto">Aceptar</string>
    <string name="description_image_foto">Imagen del sitio</string>
    <string name="description_aniadirLugar">Añade un lugar nuevo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nombre del sitio</string>
    <string name="helper_required">¡Campo requerido!</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_website">url del sitio web</string>
    <string name="hint_descripcion">Descripción del lugar</string>
    <string name="hint_foto_url">url de la imagen</string>
    <string name="edit_sitio_title_add">Añadir un nuevo sitio</string>
    <string name="menu_save">Guardar\n</string>
    <string name="edit_sitio_message_save_succes">Sitio agregado correctamente</string>


    <!-- Nombres de toolbar -->
    <string name="toolbar_onil">Onil</string>
    <string name="toolbar_ibi">Ibi</string>
    <string name="toolbar_castalla">Castalla</string>
    <string name="toolbar_alcoy">Alcoy</string>
    <string name="toolbar_ciudad">Población</string>
    <string name="toolbar_provincia">Provincia</string>
    <string name="toolbar_sitio">Añadir lugar</string>
</resources>