<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".View.EditSitioFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="@dimen/common_padding_default">

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilname"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/hint_name"
           app:helperText="@string/helper_required"
           app:endIconMode="clear_text"
           app:counterMaxLength="@integer/counter_max_name"
           app:counterEnabled="true"
           app:startIconDrawable="@drawable/ic_place"
           >


           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="@integer/counter_max_name"
               android:inputType="textCapWords"
               android:background="@drawable/edittext_border"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilPhone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/common_padding_default"
           android:hint="@string/hint_phone"
           app:endIconMode="clear_text"
           app:startIconDrawable="@drawable/ic_phone"
>

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etPhone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="@integer/counter_max_phone"
               android:inputType="phone"
               android:background="@drawable/edittext_border"/>

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilWebsite"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/common_padding_default"
           android:hint="@string/hint_website"
           app:endIconMode="clear_text"
           app:startIconDrawable="@drawable/ic_link"
>

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etWebsite"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textAppearance="?attr/textAppearanceCaption"
               android:textColor="@color/color_Link"
               android:maxLines="@integer/line_url_website"
               android:minLines="@integer/line_url_website"
               android:inputType="textMultiLine"
               android:background="@drawable/edittext_border"/>
       </com.google.android.material.textfield.TextInputLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/common_padding_default"
           android:gravity="center_vertical">

           <ImageView
               android:id="@+id/imageFoto"
               android:layout_marginStart="@dimen/common_padding_default"
               android:layout_width="@dimen/photo_size_thumb"
               android:layout_height="@dimen/photo_size_thumb"
               android:src="@drawable/ic_image"
               android:contentDescription="@string/description_image_foto"
               android:clickable="true"/>

       </LinearLayout>

   </LinearLayout>



</androidx.core.widget.NestedScrollView>